# foxglove-bridge

./: Cargo.toml  README.md
config/: config.yaml
debian/: service
src/: config.rs  lib.rs
