[package]
authors = ["David Michael Weis <dweis7@gmail.com>"]
description = "Foxglove bridge"
edition = "2021"
license = "MIT OR APACHE"
name = "foxglove-bridge"
publish = false
version = "0.1.1"

# Debian package
[package.metadata.deb]
assets = [
  [
    "target/release/foxglove-bridge",
    "/usr/bin/foxglove-bridge",
    "755",
  ],
]
maintainer = "David Weis <dweis7@gmail.com>"
maintainer-scripts = "debian/"

[package.metadata.deb.systemd-units]

[dependencies]
tokio = {version = "1", features = ["macros", "rt-multi-thread", "fs", "sync", "signal"]}

# zenoh
zenoh = "0.7.2-rc"
zenoh-config = "0.7.2-rc"

# protobuf
once_cell = "1.17.0"
prost = "0.12.1"
prost-reflect = {version = "0.12.0", features = ["derive"]}
prost-types = "0.12.1"

# utilities
anyhow = "1.0"
clap = {version = "4.2", features = ["derive"]}
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.9.25"
thiserror = "1.0"

# mcap
mcap = "0.9.0"
memmap2 = "0.9.0"

# logging
tracing = {version = "0.1", features = ["log"]}
tracing-logfmt = "0.3"
tracing-subscriber = {version = "0.3", features = [
  "registry",
  "env-filter",
  "json",
]}

# foxglove bridge
foxglove-ws = {git = "https://github.com/dmweis/foxglove-ws.git", branch = "main"}
# foxglove-ws = {path = "../foxglove-ws"}

[build-dependencies]
prost-build = "0.12.1"
prost-reflect-build = "0.12.0"
